=== rmw ChangeLog ===

2016-10-01

    Renamed mkinfo() to create_trashinfo()

2016-09-26

    No longer using var: waste_dirs_total & protected_dir_total.
        NULL is assigned as the last WASTE folder, so loops check for NULL
        to see when it's time to quit.

    undo_file (lastrmw) is now removed after -u is used (#58)

2016-09-25

    -p, --pause option removed

    -o, --orphaned option added
        create trashinfo files if no corresponding trashinfo is found (#16)

2016-09-18

    Issue #40 - To empty the trash, preface rmw on the command line
    with 'RMWTRASH=empty'. Example:
    RMWTRASH=empty rmw ....

    Fixed: #44 - Segfault if rmwrc isn't present in SYSCONFDIR

    Fixed: #45 - Restore fails if parent directory of target doesn't exist

2016-09-17

    enhancement: restoring files with only the basename #14

    url_escaping: #20 - escape Path key with URL (encoding) (Patched
    by Bruce Hernandez)
        Formerly this issue was about %20's not being converted to spaces.
    Bruce's patch makes things compliant with the freedesktop.org Trash
    specification:
    https://specifications.freedesktop.org/trash-spec/trashspec-latest.html


2016-09-16

    Fixed #27 - no info file found when restoring symlinks


2016-09-15

	Closed  #41 - add config option: force_not_required
	"force_not_required" in config file means -f or --force will not be
	required on the command line for purge to run.

    Completed - using removable media #12

2016-09-14

	Closed #33 - Requiring -f / --force as an option for purge to
	actually delete files (patched by Parth Suresh and Andy Alt)


2016-09-11

	Closed #30 - disable verbose mode by default (patched by Parth Suresh)
	Closed #29 - last entries in undofile get erased (patched by Bruce Hernandez)


2016-09-09

	Makefile.am : Thanks to parthsuresh - added 4 lines (#28) that will
	hopefully fix issue #21

	Added a function: open_err() : called if there is an error opening
	a file, displays a message.
